# SteelTide

./: .gitignore  CMakeLists.txt  README.md  run.sh
notes/: P_STRUCTURE.md
src/: main.cpp
src/constants/: constants.cpp  constants.h
src/engine/core/: application.cpp  application.h  window.cpp  window.h
src/engine/physics/: body.h
