cmake_minimum_required(VERSION 3.20)

set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)

# =============================================================================
# Project
# =============================================================================
project(SteelTide
    VERSION 0.1.0
    DESCRIPTION "Steel Tide"
    LANGUAGES C CXX
)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
    message(FATAL_ERROR "Do not build in-source. Use: cmake -B build")
endif()

# =============================================================================
# Global Settings
# =============================================================================
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_COLOR_DIAGNOSTICS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
endif()

# =============================================================================
# Options
# =============================================================================
option(ENABLE_WARNINGS            "Enable warnings"                  ON)
option(ENABLE_WARNINGS_AS_ERRORS  "Warnings as errors"               OFF)
option(ENABLE_LTO                 "Enable Link Time Optimization"     ON)
option(ENABLE_SANITIZERS          "Enable sanitizers (Debug only)"    OFF)
option(ENABLE_UNITY_BUILD         "Enable unity builds"               OFF)
option(ENABLE_PCH                 "Enable precompiled headers"        ON)
option(ENABLE_NATIVE_OPTIMIZATION "Enable -march=native"              OFF)

# =============================================================================
# Compiler Cache
# =============================================================================
find_program(CCACHE_PROGRAM  ccache)
find_program(SCCACHE_PROGRAM sccache)

if(CCACHE_PROGRAM)
    set(CMAKE_C_COMPILER_LAUNCHER   ${CCACHE_PROGRAM})
    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
elseif(SCCACHE_PROGRAM)
    set(CMAKE_C_COMPILER_LAUNCHER   ${SCCACHE_PROGRAM})
    set(CMAKE_CXX_COMPILER_LAUNCHER ${SCCACHE_PROGRAM})
endif()

# =============================================================================
# Raylib via FetchContent
# =============================================================================
include(FetchContent)

set(FETCHCONTENT_QUIET OFF)

# Raylib build options — set BEFORE FetchContent_MakeAvailable
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_GAMES    OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
    raylib
    GIT_REPOSITORY https://github.com/raysan5/raylib.git
    GIT_TAG        master          # Pin to a stable release
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(raylib)

# =============================================================================
# Sources
# =============================================================================
set(SRC_FILES
    src/main.cpp

    )

foreach(src ${SRC_FILES})
    if(NOT EXISTS "${CMAKE_SOURCE_DIR}/${src}")
        message(AUTHOR_WARNING "Source file not found: ${src}")
    endif()
endforeach()

# =============================================================================
# Target
# =============================================================================
add_executable(${PROJECT_NAME} ${SRC_FILES})

target_include_directories(${PROJECT_NAME}
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(${PROJECT_NAME}
    PRIVATE
        raylib
)

# Platform link requirements for Raylib
if(APPLE)
    target_link_libraries(${PROJECT_NAME} PRIVATE
        "-framework IOKit"
        "-framework Cocoa"
        "-framework OpenGL"
    )
elseif(UNIX)
    target_link_libraries(${PROJECT_NAME} PRIVATE
        m dl pthread
    )
elseif(WIN32)
    target_link_libraries(${PROJECT_NAME} PRIVATE
        winmm
    )
endif()

# =============================================================================
# Platform Defines
# =============================================================================
if(WIN32)
    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_WINDOWS)
elseif(APPLE)
    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_MAC)
else()
    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_LINUX)
endif()

# =============================================================================
# Precompiled Headers
# =============================================================================
if(ENABLE_PCH)
    target_precompile_headers(${PROJECT_NAME} PRIVATE
        <vector>
        <string>
        <memory>
        <unordered_map>
        <functional>
        <cmath>
        <raylib.h>
    )
endif()

# =============================================================================
# Warnings
# =============================================================================
if(ENABLE_WARNINGS)
    if(MSVC)
        target_compile_options(${PROJECT_NAME} PRIVATE
            /W4 /permissive- /Zc:__cplusplus
        )
    else()
        target_compile_options(${PROJECT_NAME} PRIVATE
            -Wall -Wextra -Wpedantic
            -Wshadow
            -Wconversion
            -Wnull-dereference
            -Wformat=2
            -Wnon-virtual-dtor
            -Woverloaded-virtual
            -Wold-style-cast
            -Wcast-align
            -Wunused
            -fdiagnostics-color=always
        )

        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(${PROJECT_NAME} PRIVATE
                -fdiagnostics-show-template-tree
                -fdiagnostics-path-format=inline-events
                -fdiagnostics-show-option
            )
        endif()

        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
            target_compile_options(${PROJECT_NAME} PRIVATE
                -Wdocumentation
                -Wthread-safety
                -Wcomma
                -Wfloat-equal
                -Wconditional-uninitialized
                -Wabstract-vbase-init
                -Wsign-conversion
                -Wimplicit-fallthrough
            )
        endif()
    endif()
endif()

if(ENABLE_WARNINGS_AS_ERRORS)
    if(MSVC)
        target_compile_options(${PROJECT_NAME} PRIVATE /WX)
    else()
        target_compile_options(${PROJECT_NAME} PRIVATE -Werror)
    endif()
endif()

# =============================================================================
# Optimization
# =============================================================================
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:/Od /Zi /RTC1>
        $<$<CONFIG:Release>:/O2 /DNDEBUG>
        $<$<CONFIG:RelWithDebInfo>:/O2 /Zi>
    )
else()
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:-O0 -g3 -fno-omit-frame-pointer -fno-optimize-sibling-calls>
        $<$<CONFIG:Release>:-O3 -DNDEBUG>
        $<$<CONFIG:RelWithDebInfo>:-O2 -g>
    )
endif()

if(ENABLE_NATIVE_OPTIMIZATION AND NOT MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Release>:-march=native>
    )
endif()

# =============================================================================
# Link Time Optimization
# =============================================================================
# if(ENABLE_LTO)
#     include(CheckIPOSupported)
#     check_ipo_supported(RESULT supported OUTPUT error)
#     if(supported)
#         set_target_properties(${PROJECT_NAME} PROPERTIES
#             INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE
#         )
#     else()
#         message(WARNING "LTO not supported: ${error}")
#     endif()
# endif()

# =============================================================================
# Sanitizers
# =============================================================================
if(ENABLE_SANITIZERS AND NOT MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:-fsanitize=address,undefined>
    )
    target_link_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:-fsanitize=address,undefined>
    )
endif()

# =============================================================================
# Assets
# =============================================================================
if(EXISTS "${PROJECT_SOURCE_DIR}/assets")
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            ${PROJECT_SOURCE_DIR}/assets
            $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
        COMMENT "Copying assets..."
    )
endif()

if(EXISTS "${PROJECT_SOURCE_DIR}/data")
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            ${PROJECT_SOURCE_DIR}/data
            $<TARGET_FILE_DIR:${PROJECT_NAME}>/data
        COMMENT "Copying data files..."
    )
endif()

# =============================================================================
# Install
# =============================================================================
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)

# =============================================================================
# Summary
# =============================================================================
message(STATUS "")
message(STATUS "┌─ ${PROJECT_NAME} v${PROJECT_VERSION} ─────────────────────")
message(STATUS "│  Build type : ${CMAKE_BUILD_TYPE}")
message(STATUS "│  C++ std    : C++${CMAKE_CXX_STANDARD}")
message(STATUS "│  Compiler   : ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
message(STATUS "│  Output     : ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
message(STATUS "│  Raylib     : FetchContent (5.5)")
message(STATUS "│  LTO        : ${ENABLE_LTO}")
message(STATUS "│  Sanitizers : ${ENABLE_SANITIZERS}")
message(STATUS "│  PCH        : ${ENABLE_PCH}")
message(STATUS "└────────────────────────────────────────────────────────────")
message(STATUS "")

